; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/p/extr_..archspc700spc700dis.c_spc700OpLength.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/p/extr_..archspc700spc700dis.c_spc700OpLength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @spc700OpLength to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spc700OpLength(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %8 [
    i32 128, label %5
    i32 130, label %6
    i32 129, label %7
    i32 131, label %7
  ]

5:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %9

6:                                                ; preds = %1
  store i32 2, i32* %2, align 4
  br label %9

7:                                                ; preds = %1, %1
  store i32 3, i32* %2, align 4
  br label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %9

9:                                                ; preds = %8, %7, %6, %5
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
